Commit 1.3: Fixed mobile layout issues

--- a/frontend/components/Employers.module.css
+++ b/frontend/components/Employers.module.css
@@ -41,7 +41,7 @@
 
 @media (max-width: 900px) {
   .employerBox {
-    margin-top: 60px;
+    margin-top: 20px;
     border-radius: 0px;
   }
   .headingTypography {
