--- a/frontend/components/HomeContent.module.css
+++ b/frontend/components/HomeContent.module.css
@@ -6,7 +6,7 @@
 }
 
 .logoTypography {
-  font-size: 6vw; /* Scales dynamically with the viewport width */
+  font-size: 6vw;
   font-family: 'Pacifico', cursive;
   text-align: center;
 }
@@ -38,14 +38,14 @@
 
 @media (max-width: 900px) {
   .icon {
-    width: 25vw; /* Increase size a bit on smaller screens if needed */
+    width: 25vw;
     height: 25vw;
   }
 }
 @media (max-width: 900px) {
   .logoTypography {
-    font-size: 12vw; /* Adjust the size for smaller screens */
-    margin-top: 110px;
+    font-size: 12vw;
+    margin-top: 20px;
   }
 }
 
