--- a/frontend/components/Rules.module.css
+++ b/frontend/components/Rules.module.css
@@ -41,7 +41,7 @@
 
 @media (max-width: 900px) {
   .rulesBox {
-    margin-top: 60px;
+    margin-top: 20px;
     border-radius: 0px;
   }
 
